--- a/assignment-1/package.json
+++ b/assignment-1/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "bootstrap": "^5.3.2",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "tailwindcss": "^3.4.1"
   }
 }
