--- a/assignment-1/package.json
+++ b/assignment-1/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
@@ -20,6 +22,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
+    "@types/react-star-ratings": "^2.3.3",
     "tailwindcss": "^3.4.1"
   }
 }
