--- a/assignment-1/package.json
+++ b/assignment-1/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^10.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
